# file_reading_analysis

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
methods/: methods.cpp  methods.h
report_process/: kernel_time.csv  report_work.ipynb  time_measure.py  time_measure.sh
tests/: CMakeLists.txt  IfstreamTest.cpp  MMapTest.cpp  ReadTest.cpp  main_test.cpp
tests/utils/: utils.cpp  utils.h
